--- a/ishraq-step-main/ishraq-step-youtupe.html
+++ b/ishraq-step-main/ishraq-step-youtupe.html
@@ -1,253 +1,269 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ishraq Step - الدروس المرئية</title>
-<link rel="stylesheet" href="css/video.css">
-<link rel="icon" href="icon.png" type="image/x-icon">
-<link rel="stylesheet" href="css/open-sidebar.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ishraq Step - الدروس المرئية</title>
+  <link rel="stylesheet" href="css/video.css">
+  <link rel="icon" href="icon.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/open-sidebar.css">
 
-<style>
-  .sections {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 10px;
-    padding: 15px;
-  }
-  /* Loader */
-  .loader {
-    display: none;
-    align-items: center;
-    justify-content: center;
-    gap:10px;
-    padding: 18px;
-    background: rgba(255,255,255,0.9);
-    border-radius: 10px;
-    color: #333;
-    font-weight: 700;
-    margin-bottom: 12px;
-  }
-  .spinner {
-    width:18px;
-    height:18px;
-    border:3px solid #ddd;
-    border-top-color:#4caf50;
-    border-radius:50%;
-    animation: spin 1s linear infinite;
-  }
-  @keyframes spin { to { transform: rotate(360deg); } }
+  <style>
+    body.loaded #globalLoader {
+      opacity: 0;
+      pointer-events: none;
+    }
 
-  .section-card {
-    background: linear-gradient(135deg, #4caf50, #00eeff);
-    color: white;
-    border-radius: 14px;
-    text-align: center;
-    padding: 18px;
-    cursor: pointer;
-    transition: transform 0.25s ease, box-shadow 0.25s ease;
-    font-size: 18px;
-    font-weight: bold;
-    box-shadow: 0 4px 10px rgba(76, 175, 80, 0.4);
-  }
+    #globalLoader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #ffffffee;
+      backdrop-filter: blur(3px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 15px;
+      font-size: 22px;
+      color: #4caf50;
+      font-weight: bold;
+      transition: opacity 0.4s ease;
+      z-index: 9999;
+    }
 
-  .section-card:hover {
-    transform: translateY(-6px) scale(1.03);
-    box-shadow: 0 8px 18px rgba(76, 175, 80, 0.6);
-  }
+    .circle-loader {
+      width: 55px;
+      height: 55px;
+      border: 6px solid #cfcfcf;
+      border-top-color: #4caf50;
+      border-radius: 50%;
+      animation: spin 0.9s linear infinite;
+    }
 
-  #videos-container {
-    display: none;
-    padding: 15px;
-  }
+    @keyframes spin { to { transform: rotate(360deg); }}
 
-  .back-btn {
-    background: #4caf50;
-    color: white;
-    padding: 8px 15px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    margin-bottom: 15px;
-  }
+    .sections {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 10px;
+      padding: 15px;
+    }
 
-  .video {
-    margin-bottom: 20px;
-    text-align: center;
-  }
+    #videos-container { display: none; padding: 15px; }
 
-  .video iframe {
-    width: 100%;
-    max-width: 600px;
-    height: 315px;
-    border: none;
-    border-radius: 10px;
-  }
+    .loader-inline {
+      display: none;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      padding: 10px;
+      margin-bottom: 15px;
+      background: #fff;
+      border-radius: 10px;
+      font-weight: bold;
+      color: #4caf50;
+    }
 
-</style>
-<link rel="stylesheet" href="css/open-sidebar.css">
-   <!--ads-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
-     crossorigin="anonymous">
-      </script>
+    .loader-inline .spinner {
+      width: 16px;
+      height: 16px;
+      border: 3px solid #ddd;
+      border-top-color: #4caf50;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    .section-card {
+      background: linear-gradient(135deg, #4caf50, #00eeff);
+      color: white;
+      border-radius: 14px;
+      text-align: center;
+      padding: 18px;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.25s;
+      box-shadow: 0 4px 10px #4caf5088;
+    }
+
+    .section-card:hover {
+      transform: translateY(-5px) scale(1.03);
+      box-shadow: 0 8px 20px #4caf50aa;
+    }
+
+    .video iframe {
+      width: 100%;
+      max-width: 600px;
+      height: 315px;
+      border: none;
+      border-radius: 10px;
+    }
+  </style>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116" crossorigin="anonymous"></script>
 </head>
- <body>
 
-<header>📚 Ishraq Step - الدروس </header>
+<body>
+
+  <!-- شاشة التحميل الرئيسية -->
+  <div id="globalLoader">
+    <div class="circle-loader"></div>
+    جاري تحميل البيانات...
+  </div>
+
+  <header>📚 Ishraq Step - الدروس</header>
 
   <input type="checkbox" id="toggleSidebar">
- <label for="toggleSidebar" class="toggle-btn">
-  ☰ اخفاء القائمة
- </label>
- 
- <iframe id="siteSidebar" src="sidebar.html"></iframe>
-<!-- 🧭 الأقسام السبعة -->
-<div id="sections-container" class="sections">
-  <div class="section-card" data-type="ماث 0">🧮 ماث 0</div>
-  <div class="section-card" data-type="ماث 1">🧮 ماث 1</div>
-  <div class="section-card" data-type="انجليزي">🇬🇧 إنجليزي</div>
-  <div class="section-card" data-type="دوائر كهربائية">🔌 دوائر كهربائية</div>
-  <div class="section-card" data-type="اخلاقيات المهنه">⚖️ أخلاقيات المهنة</div>
-  <div class="section-card" data-type="مقدمة حاسب الي">💻 مقدمة حاسب آلي</div>
-  <div class="section-card" data-type="فيزياء">🧲 فيزياء</div>
-  <div class="section-card" data-type="كورسات اخرى">🧠 كورسات أخرى</div>
-</div>
+  <label for="toggleSidebar" class="toggle-btn">☰ اخفاء القائمة</label>
 
-<!-- 🎥 قسم عرض الفيديوهات -->
-<div id="videos-container">
-  <button class="back-btn">⬅️ رجوع إلى الأقسام</button>
-  <h2 id="section-title"></h2>
+  <iframe id="siteSidebar" src="sidebar.html"></iframe>
 
-  <!-- loader: يظهر عند تحميل الفيديوهات -->
-  <div id="loader" class="loader"><div class="spinner" aria-hidden="true"></div><div>الرجاء الانتظار...</div></div>
+  <!-- الأقسام -->
+  <div id="sections-container" class="sections">
+    <div class="section-card" data-type="ماث 0">🧮 ماث 0</div>
+    <div class="section-card" data-type="ماث 1">🧮 ماث 1</div>
+    <div class="section-card" data-type="انجليزي">🇬🇧 إنجليزي</div>
+    <div class="section-card" data-type="دوائر كهربائية">🔌 دوائر كهربائية</div>
+    <div class="section-card" data-type="اخلاقيات المهنه">⚖️ أخلاقيات المهنة</div>
+    <div class="section-card" data-type="مقدمة حاسب الي">💻 مقدمة حاسب آلي</div>
+    <div class="section-card" data-type="فيزياء">🧲 فيزياء</div>
+    <div class="section-card" data-type="كورسات اخرى">🧠 كورسات أخرى</div>
+  </div>
 
-  <!-- جديد: قائمة الأقسام الفرعية -->
-  <div id="subsections-list" style="display:none; padding:12px; gap:10px;"></div>
+  <!-- فيديوهات القسم -->
+  <div id="videos-container">
+    <button class="back-btn">⬅️ رجوع</button>
+    <h2 id="section-title"></h2>
 
-  <div id="videos-list"></div>
-</div>
+    <div id="loader-inline" class="loader-inline">
+      <div class="spinner"></div>
+      تحميل الفيديوهات...
+    </div>
 
-<footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
+    <div id="subsections-list" style="display:none; padding:12px; gap:10px;"></div>
+    <div id="videos-list"></div>
+  </div>
 
-<!-- Firebase -->
- <script type="module">
-  import { db } from './chat/js/fb.js';
-  import { ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+  <footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
 
-  const sectionsContainer = document.getElementById('sections-container');
-  const videosContainer = document.getElementById('videos-container');
-  const videosList = document.getElementById('videos-list');
-  const sectionTitle = document.getElementById('section-title');
-  const backBtn = document.querySelector('.back-btn');
-  const subsectionsList = document.getElementById('subsections-list'); // جديد
+  <!-- Firebase -->
+  <script type="module">
+    import { db } from './chat/js/fb.js';
+    import { ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-  let coursesData = {};
+    const globalLoader = document.getElementById('globalLoader');
+    const loaderInline = document.getElementById('loader-inline');
 
-  // 🧠 تحميل كل الفيديوهات مرة واحدة من Firebase
-  onValue(ref(db, 'courses'), snapshot => {
-    coursesData = snapshot.val() || {};
-  });
+    let coursesData = {};
 
-  // 📌 عند الضغط على قسم
-  document.querySelectorAll('.section-card').forEach(card => {
-    card.addEventListener('click', () => {
-      const type = card.dataset.type;
-      showSectionVideos(type);
+    onValue(ref(db, 'courses'), snapshot => {
+      coursesData = snapshot.val() || {};
+      setTimeout(() => document.body.classList.add('loaded'), 300);
     });
-  });
 
-  // 🟢 عرض الفيديوهات الخاصة بقسم معين
-  function showSectionVideos(type) {
-    sectionsContainer.style.display = 'none';
-    videosContainer.style.display = 'block';
-    sectionTitle.textContent = `🎓 ${type}`;
-    videosList.innerHTML = '';
-    subsectionsList.innerHTML = '';
-    subsectionsList.style.display = 'none';
-    showLoader(true);
 
-    requestAnimationFrame(() => {
-      const all = Object.values(coursesData || {});
-      const filtered = all.filter(item => item.type === type);
+    function showInlineLoader(show){ loaderInline.style.display = show ? 'flex' : 'none'; }
 
-      if (filtered.length === 0) {
-        videosList.innerHTML = '<p>🚧 لا توجد فيديوهات بعد لهذا القسم</p>';
-        showLoader(false);
-        return;
-      }
+    const sectionsContainer = document.getElementById('sections-container');
+    const videosContainer = document.getElementById('videos-container');
+    const videosList = document.getElementById('videos-list');
+    const sectionTitle = document.getElementById('section-title');
+    const subsectionsList = document.getElementById('subsections-list');
 
-      // جمع الأقسام الفرعية (subsection)
-      const subs = Array.from(new Set(filtered.map(v => (v.subsection||'بدون قسم فرعي').trim())));
 
-      if(subs.length > 1 || (subs.length===1 && subs[0] !== '')) {
-        // عرض قائمة الأقسام الفرعية أولاً
-        subsectionsList.style.display = 'flex';
-        subsectionsList.style.flexWrap = 'wrap';
-        subsectionsList.style.gap = '10px';
-        // زر لعرض الكل
-        const allBtn = document.createElement('div');
-        allBtn.className = 'section-card';
-        allBtn.textContent = '🟢 عرض الكل';
-        allBtn.addEventListener('click', ()=> renderVideos(filtered));
-        subsectionsList.appendChild(allBtn);
+    document.querySelectorAll('.section-card').forEach(card => {
+      card.addEventListener('click', () => {
+        const type = card.dataset.type;
+        showSectionVideos(type);
+      });
+    });
 
-        subs.forEach(s => {
-          const label = s || 'بدون قسم فرعي';
-          const card = document.createElement('div');
-          card.className = 'section-card';
-          card.textContent = label;
-          card.addEventListener('click', ()=> {
-            const items = filtered.filter(v => ((v.subsection||'').trim() || 'بدون قسم فرعي') === label);
-            renderVideos(items);
+
+    function showSectionVideos(type) {
+      sectionsContainer.style.display = 'none';
+      videosContainer.style.display = 'block';
+      sectionTitle.textContent = `🎓 ${type}`;
+      videosList.innerHTML = '';
+      subsectionsList.innerHTML = '';
+      subsectionsList.style.display = 'none';
+
+      showInlineLoader(true);
+
+      requestAnimationFrame(() => {
+        const all = Object.values(coursesData || {});
+        const filtered = all.filter(item => item.type === type);
+
+        if (filtered.length === 0) {
+          videosList.innerHTML = '<p>🚧 لا توجد فيديوهات بعد لهذا القسم</p>';
+          showInlineLoader(false);
+          return;
+        }
+
+        const subs = Array.from(new Set(filtered.map(v => (v.subsection||'بدون قسم فرعي').trim())));
+
+        if(subs.length > 1 || (subs.length===1 && subs[0] !== '')) {
+          subsectionsList.style.display = 'flex';
+          subsectionsList.style.flexWrap = 'wrap';
+          subsectionsList.style.gap = '10px';
+
+          const allBtn = document.createElement('div');
+          allBtn.className = 'section-card';
+          allBtn.textContent = '🟢 عرض الكل';
+          allBtn.addEventListener('click', ()=> renderVideos(filtered));
+          subsectionsList.appendChild(allBtn);
+
+          subs.forEach(s => {
+            const label = s || 'بدون قسم فرعي';
+            const card = document.createElement('div');
+            card.className = 'section-card';
+            card.textContent = label;
+            card.addEventListener('click', ()=> {
+              const items = filtered.filter(v => ((v.subsection||'').trim() || 'بدون قسم فرعي') === label);
+              renderVideos(items);
+            });
+            subsectionsList.appendChild(card);
           });
-          subsectionsList.appendChild(card);
-        });
 
-        // افتراضيًا نعرض الكل
+          renderVideos(filtered);
+          showInlineLoader(false);
+          return;
+        }
+
         renderVideos(filtered);
-        showLoader(false);
-        return;
-      }
+        showInlineLoader(false);
+      });
+    }
 
-      // حالة وجود قسم فرعي واحد فقط أو لا أقسام فرعية
-      renderVideos(filtered);
-      showLoader(false);
+
+    function renderVideos(list){
+      videosList.innerHTML = '';
+      list.forEach(video => {
+        const div = document.createElement('div');
+        div.className = 'video';
+        const subLabel = (video.subsection || '').trim();
+        div.innerHTML = `
+          <iframe src="${video.url}" allowfullscreen></iframe>
+          <h2>${video.title}</h2>
+          ${ subLabel ? `<h3 style="color:#4caf50;">${subLabel}</h3>` : '' }
+          <p>${video.description}</p>
+        `;
+        videosList.appendChild(div);
+      });
+    }
+
+
+    document.querySelector('.back-btn').addEventListener('click', () => {
+      videosContainer.style.display = 'none';
+      sectionsContainer.style.display = 'grid';
+      sectionTitle.textContent = ''; 
+      videosList.innerHTML = '';
+      showInlineLoader(false);
     });
-  }
 
-  function renderVideos(list){
-    videosList.innerHTML = '';
-    list.forEach(video => {
-      const div = document.createElement('div');
-      div.className = 'video';
-      const subLabel = (video.subsection || '').trim();
-      div.innerHTML = `
-        <iframe src="${video.url}" allowfullscreen></iframe>
-        <h2>${video.title}</h2>
-        ${ subLabel ? `<h3 style="color:#4caf50;">${subLabel}</h3>` : '' }
-        <p>${video.description}</p>
-      `;
-      videosList.appendChild(div);
-    });
-  }
+  </script>
 
-  // دوال مساعدة للتحكم في الـ loader
-  function showLoader(show){
-    const loader = document.getElementById('loader');
-    if(!loader) return;
-    loader.style.display = show ? 'flex' : 'none';
-  }
-
-  // 🔙 زر الرجوع إلى الأقسام
-  backBtn.addEventListener('click', () => {
-    videosContainer.style.display = 'none';
-    sectionsContainer.style.display = 'grid';
-    sectionTitle.textContent = '';
-    videosList.innerHTML = '';
-    showLoader(false);
-  });
- </script>
-
-  <iframe src="sidebar.html" id="siteSidebar" title="قائمة جانبية — Ishraq Step"></iframe>
- </body>
+</body>
 </html>
