--- a/ishraq-step-main/learn/languages.html
+++ b/ishraq-step-main/learn/languages.html
@@ -1,193 +1,85 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>اختر اللغة - Ishraq Step</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Cairo', sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-    .container {
-      max-width: 1000px;
-      width: 100%;
-    }
-    .header {
-      text-align: center;
-      color: white;
-      margin-bottom: 50px;
-    }
-    .header h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
-      font-weight: 800;
-    }
-    .header p {
-      font-size: 16px;
-      opacity: 0.9;
-    }
-    .languages-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-    .language-card {
-      background: white;
-      border-radius: 15px;
-      padding: 30px;
-      text-align: center;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-      border: 3px solid transparent;
-    }
-    .language-card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-      border-color: #667eea;
-    }
-    .language-icon {
-      font-size: 48px;
-      margin-bottom: 15px;
-    }
-    .language-card h2 {
-      font-size: 24px;
-      color: #333;
-      margin-bottom: 10px;
-      font-weight: 700;
-    }
-    .language-card p {
-      color: #666;
-      font-size: 14px;
-      line-height: 1.6;
-    }
-    .loading-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.8);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 10000;
-      flex-direction: column;
-      gap: 20px;
-    }
-    .loading-overlay.hidden {
-      display: none;
-    }
-    .spinner {
-      width: 60px;
-      height: 60px;
-      border: 4px solid rgba(255, 255, 255, 0.2);
-      border-top-color: #fff;
-      border-radius: 50%;
-      animation: spin 0.8s linear infinite;
-    }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-    .loading-text {
-      color: #fff;
-      font-size: 16px;
-      text-align: center;
-    }
-    @media (max-width: 600px) {
-      .header h1 { font-size: 24px; }
-      .languages-grid { grid-template-columns: 1fr; }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>إشراق ستيب - اختر اللغة</title>
+    <link rel="stylesheet" href="../css/style.css"> <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
+   
 </head>
 <body>
-  <div id="loadingOverlay" class="loading-overlay">
-    <div class="spinner"></div>
-    <div class="loading-text">جاري التحضير...</div>
-  </div>
 
-  <div class="container">
+    <svg style="position: absolute; width: 0; height: 0;">
+        <defs>
+            <filter id="turbulent-displace" color-interpolation-filters="sRGB" x="-20%" y="-20%" width="140%" height="140%">
+                <feTurbulence type="turbulence" baseFrequency="0.02" numOctaves="10" result="noise1" seed="1" />
+                <feOffset in="noise1" dx="0" dy="0" result="offsetNoise1">
+                    <animate attributeName="dy" values="700; 0" dur="6s" repeatCount="indefinite" />
+                </feOffset>
+                <feTurbulence type="turbulence" baseFrequency="0.02" numOctaves="10" result="noise2" seed="1" />
+                <feOffset in="noise2" dx="0" dy="0" result="offsetNoise2">
+                    <animate attributeName="dy" values="0; -700" dur="6s" repeatCount="indefinite" />
+                </feOffset>
+                <feComposite in="offsetNoise1" in2="offsetNoise2" result="part1" />
+                <feBlend in="part1" in2="part1" mode="color-dodge" result="combinedNoise" />
+                <feDisplacementMap in="SourceGraphic" in2="combinedNoise" scale="25" xChannelSelector="R" yChannelSelector="B" />
+            </filter>
+        </defs>
+    </svg>
+
     <div class="header">
-      <h1>🎓 اختر اللغة البرمجية</h1>
-      <p>ابدأ رحلتك التعليمية مع اللغة التي تفضلها</p>
+        <h1>🎓 اختر مسارك البرمجي</h1>
+        <p>تصميم إشراق ستيب المتطور - اختر لغة لتبدأ التحدي</p>
     </div>
 
     <div class="languages-grid" id="languagesContainer">
-      <!-- سيتم ملؤها ديناميكياً -->
-    </div>
-  </div>
+        </div>
 
-  <script>
-    // منع ظهور نافذة الطباعة بشكل كامل
-    document.addEventListener('keydown', (e) => {
-      // منع Ctrl+P و Cmd+P
-      if ((e.ctrlKey || e.metaKey) && (e.key === 'p' || e.key === 'P')) {
-        e.preventDefault();
-        e.stopPropagation();
-        return false;
-      }
-    }, true);
+    <script>
+        const languages = {
+            python: { name: 'Python', icon: '🐍', desc: 'لغة الذكاء الاصطناعي والسهولة الممتنعة.', color: '#dd8448' },
+            javascript: { name: 'JavaScript', icon: '⚡', desc: 'لغة الويب التفاعلية والعصر الحديث.', color: '#f7df1e' },
+            java: { name: 'Java', icon: '☕', desc: 'الأساس القوي للتطبيقات الضخمة والآمنة.', color: '#007396' },
+            cpp: { name: 'C++', icon: '⚙️', desc: 'لغة الأداء الأقصى والتحكم الكامل في الذاكرة.', color: '#00599c' }
+        };
 
-    // منع القائمة اليمنى من إظهار خيار الطباعة
-    document.addEventListener('contextmenu', (e) => {
-      // يمكن حذف هذا إذا أردت السماح بالقائمة اليمنى
-      // e.preventDefault();
-    });
+        const container = document.getElementById('languagesContainer');
 
-    const loadingOverlay = document.getElementById('loadingOverlay');
-    const languagesContainer = document.getElementById('languagesContainer');
+        Object.entries(languages).forEach(([key, lang]) => {
+            const card = document.createElement('div');
+            card.className = 'card-container';
+            // تخصيص لون الكهرباء لكل لغة (اختياري)
+            card.style.setProperty('--electric-border-color', lang.color);
+            
+            card.innerHTML = `
+                <div class="inner-container">
+                    <div class="border-outer">
+                        <div class="main-card"></div>
+                    </div>
+                    <div class="glow-layer-1"></div>
+                    <div class="glow-layer-2"></div>
+                </div>
+                <div class="overlay-1"></div>
+                <div class="overlay-2"></div>
+                <div class="background-glow"></div>
+                <div class="content-container">
+                    <div class="content-top">
+                        <div class="scrollbar-glass">${key.toUpperCase()}</div>
+                        <div class="language-icon-large">${lang.icon}</div>
+                        <p class="title">${lang.name}</p>
+                    </div>
+                    <hr class="divider" />
+                    <div class="content-bottom">
+                        <p class="description">${lang.desc}</p>
+                    </div>
+                </div>
+            `;
 
-    const languages = {
-      python: {
-        name: 'Python',
-        icon: '🐍',
-        description: 'لغة سهلة التعلم وقوية جداً، مثالية للمبتدئين'
-      },
-      javascript: {
-        name: 'JavaScript',
-        icon: '⚡',
-        description: 'لغة تطوير الويب، تعمل في المتصفح والخادم'
-      },
-      java: {
-        name: 'Java',
-        icon: '☕',
-        description: 'لغة موثوقة وآمنة، تستخدم في التطبيقات الكبرى'
-      },
-      cpp: {
-        name: 'C++',
-        icon: '⚙️',
-        description: 'لغة قوية وسريعة، تستخدم في أنظمة التشغيل والألعاب'
-      }
-    };
-
-    function renderLanguages() {
-      languagesContainer.innerHTML = '';
-      Object.entries(languages).forEach(([key, lang]) => {
-        const card = document.createElement('div');
-        card.className = 'language-card';
-        card.innerHTML = `
-          <div class="language-icon">${lang.icon}</div>
-          <h2>${lang.name}</h2>
-          <p>${lang.description}</p>
-        `;
-        card.addEventListener('click', () => {
-          loadingOverlay.classList.remove('hidden');
-          setTimeout(() => {
-            window.location.href = `levels.html?lang=${key}`;
-          }, 500);
+            card.onclick = () => {
+                window.location.href = `levels.html?lang=${key}`;
+            };
+            container.appendChild(card);
         });
-        languagesContainer.appendChild(card);
-      });
-      loadingOverlay.classList.add('hidden');
-    }
-
-    renderLanguages();
-  </script>
+    </script>
 </body>
 </html>
