--- a/ishraq-step-main/sidebar.html
+++ b/ishraq-step-main/sidebar.html
@@ -47,6 +47,8 @@
         <a class="link" href="ishraq-step-youtupe.html"><span>📹</span><span class="link-text">الدروس</span></a>
         <a class="link" href="Downloads.html"><span>📘</span><span class="link-text">الكتب</span></a>
         <a class="link" href="chat/start.html"><span>💬</span><span class="link-text">التعليقات</span></a>
+        <a class="link" href="learn/profile.html"><span>💻</span><span class="link-text">حسابك الشخصي</span></a>
+        
       </nav>
 
       <div class="small">الأدوات</div>
